.happypack/s-728497480
SyntaxError: Unexpected token (202:107)

  200 |                         <div class="author">
  201 |                         <a href="#pablo"><img src="http://demander.cz/images/live/logo-csob.png" alt="..." class="avatar img-raised" />
> 202 |                       <span>CSOB</span></a></div><div class="stats"><i class="material-icons">schedule</i><!-- react-text: 258 --> <!-- /react-text --><!-- react-text: 259 -->před 4 dny<!-- /react-text --></div></div></div></div></div><div class="col-md-4"><div class="card card-blog"><div class="card-content"><h6 class="category text-success">Stavebnictví</h6><br><h4 class="card-title"><a href="#pablo">Mám zájem o tenkovrstvou omítku Baumit</a></h4><br><p class="card-description">Tenkovrstvou omítku Baumit Finetop, Baumit silikontop, Baumit Uniprimer. Preferuji cenu.</p><br><div class="footer"><div class="author"><a href="#pablo"><img src="http://demander.cz/images/live/logo-kb.png" alt="..." class="avatar img-raised"><span>Komerční Banka</span></a></div><div class="stats"><i class="material-icons">schedule</i><!-- react-text: 277 --> <!-- /react-text --><!-- react-text: 278 -->před 3 dny<!-- /react-text --></div></div></div></div></div><div class="col-md-4"><div class="card card-blog"><div class="card-content"><h6 class="category text-success">Tisk</h6><br><h4 class="card-title"><a href="#pablo">Grafický návrh, sazbu a tisk publikace</a></h4><br><p class="card-description">Jedná se o formát A5 v lepené vazbě, celkově 200 stránek s cca 100 barev. obrázky, 5O černobílých. Celkové množství 500 kusů.</p><br><div class="footer"><div class="author"><a href="#pablo"><img src="http://demander.cz/images/live/logo-vodafone.png" alt="..." class="avatar img-raised"><span>Vodafone</span></a></div><div class="stats"><i class="material-icons">schedule</i><!-- react-text: 296 --> <!-- /react-text --><!-- react-text: 297 -->před 1 hodinou<!-- /react-text --></div></div></div></div></div></div></div></div><br><br><br></div><div id="cards" class="cd-section"><div><div class="cards"><div class="container"><div class="title"><br><br><br><br><h3>Nejnovější nabídky</h3></div><div class="row"><div class="col-md-4"><div class="card card-blog"><div class="card-content"><h6 class="category text-success">Grafika</h6><br><h4 class="card-title"><a href="#pablo">Grafické služby</a></h4><br><p class="card-description">Nabízím grafické služby - návrhy a tvorba firemních log, identity nebo jiné grafické práce.</p><br><div class="footer"><div class="author"><a href="#pablo"><img src="http://demos.creative-tim.com/material-kit-pro/assets/img/faces/marc.jpg" alt="..." class="avatar img-raised"><span>LH Design</span></a></div><div class="stats"><i class="material-icons">schedule</i><!-- react-text: 329 --> <!-- /react-text --><!-- react-text: 330 -->před 2 dny<!-- /react-text --></div></div></div></div></div><div class="col-md-4"><div class="card card-blog"><div class="card-content"><h6 class="category text-success">Údržba</h6><br><h4 class="card-title"><a href="#pablo">Sanita a instalatéřské práce</a></h4><br><p class="card-description">Nabízím instalatéřské práce všeho druhu pro firmy, domácnosti nebo nárazově na stavby, rekonstrukce apod. Cena individuální.</p><br><div class="footer"><div class="author"><a href="#pablo"><img src="http://demos.creative-tim.com/material-kit-pro/assets/img/faces/card-profile1-square.jpg" alt="..." class="avatar img-raised"><span>Jaromír Havíř</span></a></div><div class="stats"><i class="material-icons">schedule</i><!-- react-text: 348 --> <!-- /react-text --><!-- react-text: 349 -->před 3 dny<!-- /react-text --></div></div></div></div></div><div class="col-md-4"><div class="card card-blog"><div class="card-content"><h6 class="category text-success">Finance</h6><br><h4 class="card-title"><a href="#pablo"><!-- react-text: 357 -->Vedení účetníctví<!-- /react-text --><!-- react-text: 358 --> <!-- /react-text --></a></h4><br><p class="card-description"><!-- react-text: 361 -->Nabízím správu účetnictví pro malé a střední podniky s orientací na výrobní a služby poskytující společnosti.<!-- /react-text --><!-- react-text: 362 --> <!-- /react-text --></p><br><div class="footer"><div class="author"><a href="#pablo"><img src="http://demos.creative-tim.com/material-kit-pro/assets/img/faces/card-profile4-square.jpg" alt="..." class="avatar img-raised"><span>Lucie Novodvorská</span></a></div><div class="stats"><i class="material-icons">schedule</i><!-- react-text: 371 --> <!-- /react-text --><!-- react-text: 372 -->před týdnem<!-- /react-text --></div></div></div></div></div></div></div></div><br><br><br><br></div></div></div>
      |                                                                                                            ^
  203 | 
  204 | 
  205 |       </div>

Error
    at transpile (/Users/foxyq/Documents/Work/react/demander/demander-frontend/node_modules/babel-loader/lib/index.js:52:13)
    at Object.module.exports (/Users/foxyq/Documents/Work/react/demander/demander-frontend/node_modules/babel-loader/lib/index.js:133:12)
    at applySyncOrAsync (/Users/foxyq/Documents/Work/react/demander/demander-frontend/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/Users/foxyq/Documents/Work/react/demander/demander-frontend/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /Users/foxyq/Documents/Work/react/demander/demander-frontend/node_modules/happypack/lib/applyLoaders.js:274:9
    at /Users/foxyq/Documents/Work/react/demander/demander-frontend/node_modules/happypack/lib/applyLoaders.js:330:17
    at Object.callback (/Users/foxyq/Documents/Work/react/demander/demander-frontend/node_modules/happypack/lib/fnOncePedantic.js:10:15)
    at Object.module.exports (/Users/foxyq/Documents/Work/react/demander/demander-frontend/node_modules/eslint-loader/index.js:182:8)
    at applySyncOrAsync (/Users/foxyq/Documents/Work/react/demander/demander-frontend/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/Users/foxyq/Documents/Work/react/demander/demander-frontend/node_modules/happypack/lib/applyLoaders.js:268:5)